Added sections for JMS and JPA.